--- a/Knock/Knock.csproj
+++ b/Knock/Knock.csproj
@@ -25,6 +25,9 @@
     <None Update="appsetting.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="locale\ja.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="locale\en.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
