--- a/Knock/appsetting.json
+++ b/Knock/appsetting.json
@@ -1,6 +1,6 @@
 ﻿{
   "locale": "en",
-  "token": "MTI3MDMwNDc3Mjk4MDk5ODIwNg.GPc0tu.TaxqdwgkifWJyEqPle971fY0k10CkpI90GyMBU",
+  "token": "---",
   "guild": "1148090697702965308",
   "channel": "1148090698181132300",
   "conversation-group": "1148090698181132298",
